--- a/Veris/bin/.gitignore
+++ b/Veris/bin/.gitignore
@@ -1,2 +1,8 @@
 /Verdict.class
 /Veris$1.class
+/com/
+/Checker.class
+/DiffChecker.class
+/EpsilonChecker.class
+/NoChecker.class
+/TokenChecker.class
