Add compile time limit to the config.

--- a/Veris/resources/default_config.json
+++ b/Veris/resources/default_config.json
@@ -5,6 +5,7 @@
   "minimumTimeLimit": "100 ms",
   "maximumTimeLimit": "3600000 ms",
   "maximumIdleTime": "5000 ms",
+  "compileTimeLimit": "60000 ms",
   "languageSpecs": [
     {
       "languageName": "Java",
